cmake_minimum_required(VERSION 3.8)
project(map_generator)

if (CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
    add_compile_options(-Wall -Wextra -Wpedantic)
endif ()

# find dependencies
find_package(ament_cmake REQUIRED)
find_package(rclcpp REQUIRED)
find_package(pcl_conversions REQUIRED)
find_package(PCL REQUIRED COMPONENTS common kdtree)

add_executable(random_forest src/random_forest.cpp)
target_include_directories(random_forest
        PUBLIC
        "$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>"
        "$<INSTALL_INTERFACE:include/${PROJECT_NAME}>")
target_link_libraries(random_forest ${PCL_LIBRARIES})
ament_target_dependencies(random_forest
        rclcpp
        pcl_conversions)

install(TARGETS
        random_forest
        DESTINATION lib/${PROJECT_NAME})

install(DIRECTORY
        launch
        rviz
        DESTINATION share/${PROJECT_NAME}/
)

ament_package()
